Fixed the expand/collapse (+/-) icons for mult groups when the search tab is first loaded. - In widgets.js (line 981-994), update expandInputGroupBySelectedTarget   to properly toggle between "+" & "-" based on the selected values when   the search tab is first loaded.

--- a/opus/application/static_media/css/opus.css
+++ b/opus/application/static_media/css/opus.css
@@ -2185,7 +2185,7 @@ even when screen is narrow */
     font-weight:bold;
 }
 
-.op-checked-indication {
+.op-mult-group-checked-indication {
     margin: 0 2px 0 5px;
 }
 
